sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:17: error: illegal start of simple expression
      	if (plusPetitQue(j-,) == false) {
                            ^AlgShellSort:24: error: ')' expected but '}' found.
    	}
        ^