sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  
  ecart = getNombreValeurs()/2
  
  while (ecart > 0) {
    
  	for (i <- 1 to getNombreValeurs()-1) {
    
    var w:Int = i
    var j:Int = i
    var copy:Boolean = true
    
    	while ((j > 0) && (copy == true)) {
      copy = false
      
      	if (plusPetitQue(j-,) == false) {
        
        copie(j-1, j)
        w = j-1
        copy = true
      	}
      j = j-1
    	}
    
    setValeur(w,v) 
  	} 
    
  }
  
}